Document acceptance of negative pid in Process.kill [ci skip]

Fixes [Bug #13501]